--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         </div>
     </nav>
 
-    <div class="fixed bottom-[80px] md:bottom-6 left-1/2 -translate-x-1/2 w-[92%] md:w-[95%] max-w-5xl h-[70px] md:h-[88px] glass-capsule rounded-full z-40 flex items-center justify-between px-2 md:px-2 md:pr-8 shadow-2xl transition-all duration-500" id="music-player">
+    <div class="fixed bottom-[80px] md:bottom-6 left-1/2 -translate-x-1/2 w-[92%] md:w-[95%] max-w-5xl h-[70px] md:h-[88px] glass-capsule rounded-full z-40 flex items-center justify-between px-2 md:px-2 md:pr-8 shadow-2xl transition-all duration-500 translate-y-[200%]" id="music-player">
         <div class="flex items-center gap-3 pl-1 md:pl-2 w-[60%] md:w-[30%] overflow-hidden">
             <div class="relative w-12 h-12 md:w-16 md:h-16 rounded-full overflow-hidden border-2 border-white/10 shadow-lg flex-shrink-0">
                 <img id="player-art" src="https://images.unsplash.com/photo-1493225255756-d9584f8606e9?w=200" class="w-full h-full object-cover animate-[spin-slow_8s_linear_infinite] paused-spin">
@@ -466,6 +466,9 @@
         }
 
         function playTrack(videoId, index) {
+            // --- NEW: Slide player up on first click ---
+            document.getElementById('music-player').classList.remove('translate-y-[200%]');
+
             let song = library.find(s => s.id === videoId);
             if(!song) song = { title: "Unknown", artist: "YouTube", img: "https://placehold.co/200" }; 
 
